karl/views/static/ux2/css/karl/pushdowns.less
.pushContainer() {
    position: relative;
    overflow: hidden;
    padding: .889em;
    background-color: @pushDownBg;
    background-image: url('../img/vertical_stripes.png');
    background-position: top left;
    background-repeat: repeat;
    &:before {
        content: "";
        font-size: 0;
        position: absolute;
        top: 0;
        left: -25%;
        width: 150%;
        height: 100%;
        @shadow: inset 0 .2em 15px rgba(0,0,0,0.4),inset 0 -0.1em 20px rgba(0,0,0,0.4);
        .css3_box_shadow(@shadow);
        pointer-events: none;
    }
    .thereIsMore {
        text-shadow: 0 1px 0 rgba(255,255,255,.4);
    }
}
.pushdown {
    .pushContainer();
    display: none;
}
.open .pushdown {
    display: block;
}
.pushdown-toggle:hover {
    cursor: pointer;
}
.pushdownContent {
    width: @fixedSiteWidth;
    margin: auto;
    a {
        color: @baseFontColor;
    }
    a.goto {
        color: @white;
    }
    h3 {
        margin-top: 0;
        font-weight: bold;
        text-shadow: 0 1px 0 rgba(255,255,255,.3);
        position: relative;
    }
    .avatar {
        width: 48px;
        height: auto;
    }
    .messagewrapper {
        height: 3.2em;
        overflow: hidden;
    }
    .messagewrapper-view-all {
        height: auto;
        overflow: visible;
    }
    .messagetext {
        display: block;
        line-height: normal;
    }
    a.messagetext {
        color: #555;
    }
    a.messagetext:hover {
        color: #222;
    }
    .timestamp {
        float: right;
        .smaller();
        color: fadeOut(@baseFontColor, 40%);
    }
}
.pushDownList {
    .noBullets();
    > li {
        position: relative;
        border-top: 1px solid #C3C3C3;
        border-bottom: 1px solid #919191;
        margin: 0;
        padding: .5em 0;
        ul li {
            border: none;
        }
    }
    li:first-of-type {
        border-top: none;
    }
    li:last-of-type {
        border-bottom: none;
    }
}
.pushDownList-title {
    margin: 0;
    padding: 0;
}
.pushDownList-info {
    .smaller();
    cite {
        font-style: normal;
        white-space: nowrap;
        }
    }
.pushDownList-helper {
    .smaller();
    position: absolute;
    z-index: 3;
    top: 1em;
    right: 0;
    .dropdown-menu {
        left: auto;
        right: 0;
    }
}
.pushDownNavigation {
    padding: 0;
    > li {
        z-index: 2;
        padding: 0;
    }
    > li > a {
        display: block;
        color: @baseFontColor;
        position: relative;
        background: transparent url('../img/right_arrow_icon.png') 100% 50% no-repeat;
        background-origin: content-box;
        line-height: 2.369em;
    }
    a:hover {
        color: #fff;
    }
    .selected a {
        color: #fff;
        font-weight: bold;
        text-shadow: 0 -1px 0 rgba(0,0,0,.4);
    }
    .messageCounter {
        font-size: .9em;
        font-weight: normal;
        margin-left: 0.5em;
    }
}
.panel {
    position: relative;
    .col(6);
    #sections {
        .messageCounter {
            float: right;
            margin: 0.6em 1em 0.5em 0.5em;
        }
    }
}
.updating {
    opacity: 0;
    display: inline-block;
    font-weight: normal;
    width: 16px;
    height: 16px;
    margin-left: .5em;
    text-indent: -999em;
    overflow: hidden;
    vertical-align: middle;
    background: transparent url('../img/loader.gif') 50% 50% no-repeat;
}
.houstonWeHaveAProblem {
    display: none;
    .smaller();
}
table.fixed-layout{
    table-layout:fixed;
}
td.recent-activity-time{
    width:25%;
}
td.recent-activity-title{
    width:75%;
    word-wrap:break-word;
}

